# cpp_course

./: .clang-format  .gitignore  README.md
ball_game/: CmakeLists.txt
ball_game/src/: CmakeLists.txt  ball_game.h
ball_game/test/: CmakeLists.txt  test.cpp
caches/: CMakeLists.txt  Config.h.in
caches/src/: CMakeLists.txt  cache.h
caches/test/: CMakeLists.txt  lru_test_data_gen.py  test.cpp  test_data_gen.py
caches/test/test_data/: test_data_2q.ans  test_data_best.ans  test_data_lru.ans
matrix_det/: CmakeLists.txt
matrix_det/src/: CmakeLists.txt  matrix.h
matrix_det/test/: CmakeLists.txt  test.cpp  test_data_gen.py
matrix_det/test/test_data/: test_data.ans
prime_numbers/: FindPrimeDummy.c  FindPrimeErat.c
prime_numbers_lib/: CheckPrimeNth.c  FindPrimeNth.c  FindPrimeNth.h
tasks_part_1/task_1/: LinkedList.cpp  LinkedList.h  main.cpp
tasks_part_1/task_11/: main.cpp
tasks_part_1/task_14/: main.cpp
tasks_part_1/task_3/: NaryTree.cpp  NaryTree.h  main.cpp
tasks_part_1/task_5/: MatrixOps.cpp  MatrixOps.h  main.cpp
tasks_part_1/task_8/: main.cpp
tasks_part_1/task_9/: main.cpp
tasks_part_2/src/: ball_game.h
tasks_part_2/test/: test.cpp
templates/: CmakeLists.txt
templates/src/: sfinae.h  transp_func.h
templates/test/: test.cpp
tree/: CmakeLists.txt
tree/src/: CmakeLists.txt  RBTree.h
tree/test/: CmakeLists.txt  test.cpp  test_data_gen.py
tree/test/test_data/: test_data.ans
triangles/: CMakeLists.txt
triangles/src/: CMakeLists.txt  primitives.h
triangles/test/: CMakeLists.txt  test.cpp
